font spacing fix for mobile

--- a/app/assets/stylesheets/pages/_gallery.scss
+++ b/app/assets/stylesheets/pages/_gallery.scss
@@ -229,7 +229,10 @@
   .event_header_text p {
     line-height: none;
     letter-spacing: none;
-    text-align: justify;
+    text-align: left;
+    width: 95%;
+    font-size: 16px;
+    // white-space: 1px;
   }
 
   .piece img {
